spike-iter-3/compile-fail/tests/ui/dyn_credential_const_key.stderr
error[E0038]: the trait `Credential` is not dyn compatible
  --> tests/ui/dyn_credential_const_key.rs:15:20
   |
15 |     let _: Box<dyn Credential<Input = (), Scheme = BearerScheme, State = ApiKeyState>> =
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Credential` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $WORKSPACE/credential-proto/src/lib.rs
   |
   |     const KEY: &'static str;
   |           ^^^ the trait is not dyn compatible because it contains associated const `KEY`
   = help: the following types implement `Credential`:
             credential_proto_builtin::ApiKeyCredential
             credential_proto_builtin::OAuth2Credential
             credential_proto_builtin::SalesforceJwtCredential
           consider defining an enum where each variant holds one of these types,
           implementing `Credential` for this new enum and using it instead
